--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div>
     <header>
         <div class="container nav">
-            <div class="brand">
+            <a class="brand" href="https://sw6.hamburgpapier-shop.de/">
                 <img class="brand-logo" src="https://sw6.hamburgpapier-shop.de/media/c8/78/ef/1763899606/logo_hp_rz_breit_(1).png?ts=1763899606" alt="Hamburgpapier Logo">
-            </div>
+            </a>
             <button class="nav-toggle" aria-label="Menü öffnen" aria-expanded="false">
                 <span></span><span></span><span></span>
             </button>
