--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -30,11 +30,13 @@
             </div>
         </div>
     </div>
-    <header>
+    <div id="smooth-scroll">
+    <header data-luxy="true">
         <div class="container nav">
             <a class="brand" href="https://sw6.hamburgpapier-shop.de/">
                 <img class="brand-logo" src="https://sw6.hamburgpapier-shop.de/media/c8/78/ef/1763899606/logo_hp_rz_breit_(1).png?ts=1763899606" alt="Hamburgpapier Logo">
             </a>
+            <a class="nav-shop" href="https://sw6.hamburgpapier-shop.de/">Online Shop</a>
             <button class="nav-toggle" aria-label="Menü öffnen" aria-expanded="false">
                 <span></span><span></span><span></span>
             </button>
@@ -76,8 +78,8 @@
         <section class="hero" id="hero">
             <video src="https://sw6.hamburgpapier-shop.de/media/69/1a/68/1763924613/Video%20Produktion.mp4?ts=1764256857" autoplay muted loop playsinline webkit-playsinline preload="auto"></video>
             <div class="hero__content">
-                <h1 class="hero-title">Hygienepapier, das sicher liefert – von der Faser bis zur fertigen Rolle.</h1>
-                <p class="hero-subtitle">Produktion und Versorgung aus einer Hand: Hamburgpapier zeigt den gesamten Prozess in Bewegtbild und sorgt für verlässliche Qualität für Gastronomie, Pflege, Gebäudereinigung, Industrie und Hotellerie.</p>
+                <h1 class="hero-title">Hygienepapier Produktion bei Hamburgpapier</h1>
+                                                <p class="hero-subtitle">Bei Hamburgpapier verantworten wir den gesamten Herstellungsprozess unserer Hygienepapiere selbst von der Produktion bis zur zuverl&auml;ssigen Belieferung. Durch klare Abl&auml;ufe, moderne Technik und hohe Qualit&auml;tsstandards stellen wir sicher, dass unsere Produkte den Anforderungen von Gastronomie, Pflege, Geb&auml;udereinigung, Industrie und Hotellerie dauerhaft gerecht werden.</p>
                 <div class="hero-actions">
                     <a class="btn btn-primary" href="#produktion">Hygienepapier Produktion bei Hamburgpapier</a>
                 </div>
@@ -372,9 +374,10 @@
             <div class="brand">
                 <span>Paper Motion</span>
             </div>
-            <div>&copy; 2025 Paper Motion – Video-first Experiences</div>
+            <div>&copy; 2025 Paper Motion - Video-first Experiences</div>
         </div>
     </footer>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" defer></script>
@@ -382,3 +385,5 @@
 
 </body>
 </html>
+
+
