--- a/index.html
+++ b/index.html
@@ -12,6 +12,33 @@
     <link rel="apple-touch-icon" href="Assents/favicon-hamburgpapier.png">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600;700&family=Manrope:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@graph": [
+            {
+                "@type": "WebSite",
+                "@id": "https://hamburgpapier-shop-produktion.de/#website",
+                "url": "https://hamburgpapier-shop-produktion.de/",
+                "name": "Hamburgpapier",
+                "description": "Erleben Sie die Produktion von Hygienepapier bei Hamburgpapier: Vom Zellstoff zur fertigen Rolle, mit Videos zu Papiermaschine, Trocknung, Schneiden, Verpacken und Versand.",
+                "publisher": {
+                    "@id": "https://hamburgpapier-shop-produktion.de/#organization"
+                }
+            },
+            {
+                "@type": "Organization",
+                "@id": "https://hamburgpapier-shop-produktion.de/#organization",
+                "name": "Hamburgpapier",
+                "url": "https://hamburgpapier-shop-produktion.de/",
+                "logo": {
+                    "@type": "ImageObject",
+                    "url": "https://sw6.hamburgpapier-shop.de/media/c8/78/ef/1763899606/logo_hp_rz_breit_(1).png?ts=1763899606"
+                }
+            }
+        ]
+    }
+    </script>
 </head>
 <body class="is-preloading">
     <div class="preloader" id="preloader" aria-hidden="true">
@@ -32,7 +59,7 @@
     </div>
     <header data-luxy="true">
         <div class="container nav">
-            <a class="brand" href="https://sw6.hamburgpapier-shop.de/">
+            <a class="brand" href="https://hamburgpapier-shop-produktion.de/">
                 <img class="brand-logo" src="https://sw6.hamburgpapier-shop.de/media/c8/78/ef/1763899606/logo_hp_rz_breit_(1).png?ts=1763899606" alt="Hamburgpapier Logo">
             </a>
             <a class="nav-shop" href="https://sw6.hamburgpapier-shop.de/">Online Shop</a>
@@ -385,4 +412,3 @@
 
 </body>
 </html>
-
