--- a/index.html
+++ b/index.html
@@ -399,9 +399,9 @@
     <footer>
         <div class="container footer-inner">
             <div class="brand">
-                <span>Paper Motion</span>
+                <span>Hamburgpapier</span>
             </div>
-            <div>&copy; 2025 Paper Motion - Video-first Experiences</div>
+            <div>&copy; 2025 Hamburgpapier. Alle Rechte vorbehalten.</div>
         </div>
     </footer>
     </div>
