--- a/index.html
+++ b/index.html
@@ -396,12 +396,13 @@
         </section>
     </main>
 
-    <footer>
+    <footer role="contentinfo" aria-labelledby="footer-heading">
         <div class="container footer-inner">
-            <div class="brand">
+            <h2 class="sr-only" id="footer-heading">Footer Bereich</h2>
+            <div class="brand" aria-label="Hamburgpapier">
                 <span>Hamburgpapier</span>
             </div>
-            <div>&copy; 2025 Hamburgpapier. Alle Rechte vorbehalten.</div>
+            <p>&copy; 2025 Hamburgpapier. Alle Rechte vorbehalten.</p>
         </div>
     </footer>
     </div>
