--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
             <div class="hero__content">
                 <h1 class="hero-title">Hygienepapier Produktion bei Hamburgpapier</h1>
                 <div class="hero-actions">
-                    <a class="btn btn-primary" href="#produktion">Hygienepapier Produktion bei Hamburgpapier</a>
+                    <a class="btn btn-primary" href="#so-entsteht">Hygienepapier Produktion bei Hamburgpapier</a>
                 </div>
             </div>
         </section>
         <section id="produktion">
             <div class="container">
                 <div class="section-header">
-                    <h2>So entsteht Hygienepapier</h2>
+                    <h2 id="so-entsteht">So entsteht Hygienepapier</h2>
                     <p>Hamburgpapier produziert Hygienepapiere für Großverbraucher: von Recycling-Tissue bis Premium-Frischfaser. Moderne, ressourcenschonende Anlagen sichern konstante Qualität, hygienische Standards und schnelle Verfügbarkeit für Gastronomie, Pflege, Gebäudereinigung, Industrie und Hotellerie.</p>
                 </div>
 
@@ -411,5 +411,4 @@
 
 </body>
 </html>
-
 
