--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburgpapier – Hygienepapier Produktion &amp; Prozess-Insights</title>
+    <title>Hamburgpapier - Hygienepapier Produktion &amp; Prozess-Insights</title>
     <meta name="description" content="Erleben Sie die Produktion von Hygienepapier bei Hamburgpapier: Vom Zellstoff zur fertigen Rolle, mit Videos zu Papiermaschine, Trocknung, Schneiden, Verpacken und Versand.">
+    <meta property="og:title" content="Hamburgpapier – Hygienepapier Produktion &amp; Prozess-Insights">
+    <meta property="og:description" content="Erleben Sie die Produktion von Hygienepapier bei Hamburgpapier: Vom Zellstoff zur fertigen Rolle, mit Videos zu Papiermaschine, Trocknung, Schneiden, Verpacken und Versand.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://hamburgpapier-shop-produktion.de/">
+    <meta property="og:image" content="https://sw6.hamburgpapier-shop.de/media/c8/78/ef/1763899606/logo_hp_rz_breit_(1).png?ts=1763899606">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Hamburgpapier – Hygienepapier Produktion &amp; Prozess-Insights">
+    <meta name="twitter:description" content="Erleben Sie die Produktion von Hygienepapier bei Hamburgpapier: Vom Zellstoff zur fertigen Rolle, mit Videos zu Papiermaschine, Trocknung, Schneiden, Verpacken und Versand.">
+    <meta name="twitter:image" content="https://sw6.hamburgpapier-shop.de/media/c8/78/ef/1763899606/logo_hp_rz_breit_(1).png?ts=1763899606">
     <link rel="preload" as="video" href="https://sw6.hamburgpapier-shop.de/media/69/1a/68/1763924613/Video%20Produktion.mp4?ts=1764256857" type="video/mp4">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -106,6 +115,7 @@
             <video src="https://sw6.hamburgpapier-shop.de/media/69/1a/68/1763924613/Video%20Produktion.mp4?ts=1764256857" autoplay muted loop playsinline webkit-playsinline preload="auto"></video>
             <div class="hero__content">
                 <h1 class="hero-title">Hygienepapier Produktion bei Hamburgpapier</h1>
+                <p class="hero-subtitle">Vom Zellstoff zur fertigen Rolle – wir zeigen jede Station der Hygienepapier-Produktion bei Hamburgpapier.</p>
                 <div class="hero-actions">
                     <a class="btn btn-primary" href="#so-entsteht">Hygienepapier Produktion bei Hamburgpapier</a>
                 </div>
@@ -411,4 +421,3 @@
 
 </body>
 </html>
-
