--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <section id="produktion">
             <div class="container">
                 <div class="section-header">
-                    <h2 id="so-entsteht">So entsteht Hygienepapier</h2>
+                    <h2 id="so-entsteht" data-shadow-text>So entsteht Hygienepapier</h2>
                     <p>Hamburgpapier produziert Hygienepapiere für Großverbraucher: von Recycling-Tissue bis Premium-Frischfaser. Moderne, ressourcenschonende Anlagen sichern konstante Qualität, hygienische Standards und schnelle Verfügbarkeit für Gastronomie, Pflege, Gebäudereinigung, Industrie und Hotellerie.</p>
                 </div>
 
@@ -230,6 +230,21 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="shop" id="shop">
+            <div class="container">
+                <div class="shop__header">
+                    <p class="shop__eyebrow">Online Shop</p>
+                    <h2>Produktion gesehen, jetzt im Shop bestellen</h2>
+                    <p class="shop__lead">Sie haben gesehen, wie wir Hygienepapier herstellen. Im Hamburgpapier Online Shop finden Sie sofort lieferbare Ware, klare Staffelpreise und schnelle Lieferung fuer Gastronomie, Pflege, Reinigung, Industrie und Hotel.</p>
+                    <div class="shop__actions">
+                        <a class="btn btn-primary" href="https://sw6.hamburgpapier-shop.de/">Zum Online Shop</a>
+                        <a class="btn btn-ghost" href="https://sw6.hamburgpapier-shop.de/">Sortiment entdecken</a>
+                    </div>
+                </div>
+
             </div>
         </section>
 
