--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <section id="produktion">
             <div class="container">
                 <div class="section-header">
-                    <h2 id="so-entsteht" data-shadow-text>So entsteht Hygienepapier</h2>
+                    <h2 id="so-entsteht" data-shadow-text data-shadow-mode="transform">So entsteht Hygienepapier</h2>
                     <p>Hamburgpapier produziert Hygienepapiere für Großverbraucher: von Recycling-Tissue bis Premium-Frischfaser. Moderne, ressourcenschonende Anlagen sichern konstante Qualität, hygienische Standards und schnelle Verfügbarkeit für Gastronomie, Pflege, Gebäudereinigung, Industrie und Hotellerie.</p>
                 </div>
 
