--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                     <video class="process-slide__image process-slide__video" src="Assents/1-rohstoffe-zellstoff-recyclingpapier.mp4" muted loop playsinline preload="auto"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 1</div>
-                                        <h3 class="process-slide__title">1. Die Rohstoffe - Zellstoff &amp; Recyclingpapier</h3>
+                                        <h3 class="process-slide__title">Die Rohstoffe - Zellstoff &amp; Recyclingpapier</h3>
                                         <p class="process-slide__text">Die Produktion beginnt mit Zellstoff oder recycelten Papierfasern. Diese werden aufgelöst und zu einer feinen Fasersuspension verarbeitet.</p>
                                     </div>
                                 </article>
@@ -148,7 +148,7 @@
                                     <video class="process-slide__image process-slide__video" src="Assents/2-papiermaschine-bildung.mp4" muted loop playsinline preload="auto"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 2</div>
-                                        <h3 class="process-slide__title">2. Die Papiermaschine - Bildung der Papierbahn</h3>
+                                        <h3 class="process-slide__title">Die Papiermaschine - Bildung der Papierbahn</h3>
                                         <p class="process-slide__text">Die Fasersuspension wird auf ein Sieb gegeben, das Wasser läuft ab, und es entsteht die erste feuchte Papierbahn.</p>
                                     </div>
                                 </article>
@@ -156,7 +156,7 @@
                                     <video class="process-slide__image process-slide__video" src="Assents/3-trocknung-creping.mp4" muted loop playsinline preload="auto"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 3</div>
-                                        <h3 class="process-slide__title">3. Trocknung &amp; Creping</h3>
+                                        <h3 class="process-slide__title">Trocknung &amp; Creping</h3>
                                         <p class="process-slide__text">Die Bahn wird über einen heißen Trockenzylinder geführt. Durch das Creping entsteht das typische weiche und saugfähige Tissuepapier.</p>
                                     </div>
                                 </article>
@@ -164,7 +164,7 @@
                                     <video class="process-slide__image process-slide__video" src="Assents/4-aufrollen-papierbahn.mp4" muted loop playsinline preload="auto"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 4</div>
-                                        <h3 class="process-slide__title">4. Aufrollen der Papierbahn</h3>
+                                        <h3 class="process-slide__title">Aufrollen der Papierbahn</h3>
                                         <p class="process-slide__text">Die fertige Tissuebahn wird zu großen Jumborollen gewickelt - der Ausgangspunkt für alle späteren Produkte.</p>
                                     </div>
                                 </article>
@@ -172,7 +172,7 @@
                                     <video class="process-slide__image process-slide__video" src="Assents/5-toilettenpapier-perforieren-praegen.mp4" muted loop playsinline preload="auto"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 5</div>
-                                        <h3 class="process-slide__title">5. Toilettenpapier-Laufband - Perforieren &amp; Prägen</h3>
+                                        <h3 class="process-slide__title">Toilettenpapier-Laufband - Perforieren &amp; Prägen</h3>
                                         <p class="process-slide__text">Die Jumborolle wird abgewickelt, perforiert, geprägt und in mehrere schmale Bahnen geteilt.</p>
                                     </div>
                                 </article>
@@ -180,7 +180,7 @@
                                     <video class="process-slide__image process-slide__video" poster="Assents/6-poster.jpg" src="Assents/6-qualitaetskontrolle-scanner.mp4" muted loop playsinline preload="auto"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 6</div>
-                                        <h3 class="process-slide__title">6. Qualitätskontrolle - Scanner prüft die Bahn</h3>
+                                        <h3 class="process-slide__title">Qualitätskontrolle - Scanner prüft die Bahn</h3>
                                         <p class="process-slide__text">Ein optischer Scanner misst Dicke, Feuchtigkeit und erkennt Unregelmäßigkeiten in Echtzeit.</p>
                                     </div>
                                 </article>
@@ -188,7 +188,7 @@
                                     <video class="process-slide__image process-slide__video" poster="Assents/7-poster.jpg" src="Assents/7-schneiden-toilettenpapierrollen.mp4" muted loop playsinline preload="auto"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 7</div>
-                                        <h3 class="process-slide__title">7. Schneiden der Toilettenpapierrollen</h3>
+                                        <h3 class="process-slide__title">Schneiden der Toilettenpapierrollen</h3>
                                         <p class="process-slide__text">Die langen Stränge werden präzise in einzelne Toilettenpapierrollen geschnitten.</p>
                                     </div>
                                 </article>
@@ -196,7 +196,7 @@
                                     <video class="process-slide__image process-slide__video" src="Assents/8-weiterverarbeitung-foerderband.mp4" muted loop playsinline preload="auto"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 8</div>
-                                        <h3 class="process-slide__title">8. Weiterverarbeitung auf dem Förderband</h3>
+                                        <h3 class="process-slide__title">Weiterverarbeitung auf dem Förderband</h3>
                                         <p class="process-slide__text">Die fertigen Rollen werden sortiert, gruppiert und für die Verpackung vorbereitet.</p>
                                     </div>
                                 </article>
@@ -204,7 +204,7 @@
                                     <video class="process-slide__image process-slide__video" src="Assents/9-verpacken-rollen.mp4" muted loop playsinline preload="auto"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 9</div>
-                                        <h3 class="process-slide__title">9. Verpacken der Rollen</h3>
+                                        <h3 class="process-slide__title">Verpacken der Rollen</h3>
                                         <p class="process-slide__text">Die Rollen werden automatisch zu Sets zusammengestellt und in Folie oder Karton verpackt.</p>
                                     </div>
                                 </article>
@@ -212,17 +212,20 @@
                                     <video class="process-slide__image process-slide__video" src="Assents/10-palettieren-versandbereit.mp4" muted loop playsinline preload="auto"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 10</div>
-                                        <h3 class="process-slide__title">10. Palettieren &amp; Versandbereit machen</h3>
+                                        <h3 class="process-slide__title">Palettieren &amp; Versandbereit machen</h3>
                                         <p class="process-slide__text">Die verpackten Einheiten werden auf Paletten gestapelt, umwickelt und für den Transport gesichert.</p>
                                     </div>
                                 </article>
                             </div>
                         </div>
 
-                        <div class="process-scroll__controls" aria-label="Slider Navigation">
-                            <div class="process-scroll__progress" aria-hidden="true">
+                        <div class="process-scroll__progress-wrap" aria-hidden="true">
+                            <div class="process-scroll__progress">
                                 <div class="process-scroll__progress-fill"></div>
                             </div>
+                        </div>
+
+                        <div class="process-scroll__controls" aria-label="Slider Navigation">
                             <div class="process-scroll__arrows">
                                 <button class="process-scroll__btn" data-dir="prev" aria-label="Vorheriger Schritt"><</button>
                                 <button class="process-scroll__btn" data-dir="next" aria-label="Nächster Schritt">></button>
