--- a/index.html
+++ b/index.html
@@ -115,12 +115,13 @@
             <video src="https://sw6.hamburgpapier-shop.de/media/69/1a/68/1763924613/Video%20Produktion.mp4?ts=1764256857" autoplay muted loop playsinline webkit-playsinline preload="auto"></video>
             <div class="hero__content">
                 <h1 class="hero-title">Hygienepapier Produktion bei Hamburgpapier</h1>
-                <p class="hero-subtitle">Vom Zellstoff zur fertigen Rolle – wir zeigen jede Station der Hygienepapier-Produktion bei Hamburgpapier.</p>
+                <p class="hero-subtitle">Vom Zellstoff zur fertigen Rolle - wir zeigen jede Station der Hygienepapier-Produktion bei Hamburgpapier.</p>
                 <div class="hero-actions">
                     <a class="btn btn-primary" href="#so-entsteht">Hygienepapier Produktion bei Hamburgpapier</a>
                 </div>
             </div>
         </section>
+
         <section id="produktion">
             <div class="container">
                 <div class="section-header">
