--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     <header data-luxy="true">
         <div class="container nav">
-            <a class="brand" href="https://hamburgpapier-shop-produktion.de/">
+            <a class="brand" href="https://sw6.hamburgpapier-shop.de/">
                 <img class="brand-logo" src="https://sw6.hamburgpapier-shop.de/media/c8/78/ef/1763899606/logo_hp_rz_breit_(1).png?ts=1763899606" alt="Hamburgpapier Logo">
             </a>
             <a class="nav-shop" href="https://sw6.hamburgpapier-shop.de/">Online Shop</a>
