performace improvements and bug fixes

--- a/index.html
+++ b/index.html
@@ -249,6 +249,83 @@
                     </div>
                 </div>
 
+                <div class="shop-grid shop-grid--highlights">
+                    <article class="shop-card" style="--card-accent: var(--primary)">
+                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--primary) 24%, #ffffff), color-mix(in srgb, var(--baltic) 26%, transparent));"></div>
+                        <div class="shop-card__body">
+                            <p class="shop-card__eyebrow">Toilettenpapier</p>
+                            <h3 class="shop-card__title">Jumbo- &amp; Midi-Rollen</h3>
+                            <p class="shop-card__desc">2- und 3-lagig, perforiert, gepraegt. Staubarm, kompatibel mit gaengigen Spenderkernen.</p>
+                            <div class="shop-card__price">ab 12,90 EUR / VPE &middot; Staffel ab 10 VPE</div>
+                            <div class="shop-card__tags">
+                                <span class="shop-card__tag">Recycling &amp; Frischfaser</span>
+                                <span class="shop-card__tag">48h Versand</span>
+                            </div>
+                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=toilettenpapier">Jetzt ansehen</a>
+                        </div>
+                    </article>
+
+                    <article class="shop-card" style="--card-accent: var(--info)">
+                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--info) 22%, #ffffff), color-mix(in srgb, var(--baltic) 18%, transparent));"></div>
+                        <div class="shop-card__body">
+                            <p class="shop-card__eyebrow">Papierhandtuecher</p>
+                            <h3 class="shop-card__title">Z- / C-Falz</h3>
+                            <p class="shop-card__desc">Weiche, saugfaehige Tuecher fuer Waschromme und Gaeste-WCs. Helle Qualitaeten, hygienisch verpackt.</p>
+                            <div class="shop-card__price">ab 14,50 EUR / Karton &middot; Staffel ab 8 Kartons</div>
+                            <div class="shop-card__tags">
+                                <span class="shop-card__tag">Staubarm</span>
+                                <span class="shop-card__tag">FSC/PEFC</span>
+                            </div>
+                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=papierhandt%C3%BCcher">Jetzt ansehen</a>
+                        </div>
+                    </article>
+
+                    <article class="shop-card" style="--card-accent: var(--warning)">
+                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--warning) 18%, #ffffff), color-mix(in srgb, var(--baltic) 16%, transparent));"></div>
+                        <div class="shop-card__body">
+                            <p class="shop-card__eyebrow">Kuechenrollen</p>
+                            <h3 class="shop-card__title">Wischtuecher fuer Kueche</h3>
+                            <p class="shop-card__desc">Fettaufnehmend und reissfest, 2-3-lagig. Ideal fuer Gastronomie und Catering.</p>
+                            <div class="shop-card__price">ab 9,90 EUR / 32er-Paket &middot; Staffel ab 5 Paketen</div>
+                            <div class="shop-card__tags">
+                                <span class="shop-card__tag">Fettaufnahme+</span>
+                                <span class="shop-card__tag">Praktische Packs</span>
+                            </div>
+                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=k%C3%BCchenrollen">Jetzt ansehen</a>
+                        </div>
+                    </article>
+
+                    <article class="shop-card" style="--card-accent: var(--success)">
+                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--success) 22%, #ffffff), color-mix(in srgb, var(--baltic) 14%, transparent));"></div>
+                        <div class="shop-card__body">
+                            <p class="shop-card__eyebrow">Handtuchrollen</p>
+                            <h3 class="shop-card__title">Spenderkompatibel</h3>
+                            <p class="shop-card__desc">Innen- und aussenabrollende Rollen, saugfaehig und sparsam im Verbrauch, passend zu Tork und Co.</p>
+                            <div class="shop-card__price">ab 18,90 EUR / Karton &middot; Staffel ab 6 Kartons</div>
+                            <div class="shop-card__tags">
+                                <span class="shop-card__tag">Innen-/Aussenabwicklung</span>
+                                <span class="shop-card__tag">Saugstark</span>
+                            </div>
+                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=handtuchrollen">Jetzt ansehen</a>
+                        </div>
+                    </article>
+
+                    <article class="shop-card" style="--card-accent: var(--danger)">
+                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--danger) 18%, #ffffff), color-mix(in srgb, var(--baltic) 12%, transparent));"></div>
+                        <div class="shop-card__body">
+                            <p class="shop-card__eyebrow">Putzpapier</p>
+                            <h3 class="shop-card__title">Industrie &amp; Werkstatt</h3>
+                            <p class="shop-card__desc">Reissfest, nassstabil und staubarm fuer Maschinenparks, Produktion und Reinigungsteams.</p>
+                            <div class="shop-card__price">ab 16,50 EUR / Doppelrolle &middot; Staffel ab 12 Rollen</div>
+                            <div class="shop-card__tags">
+                                <span class="shop-card__tag">Nassfest</span>
+                                <span class="shop-card__tag">Low-Lint</span>
+                            </div>
+                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=putzpapier">Jetzt ansehen</a>
+                        </div>
+                    </article>
+                </div>
+
             </div>
         </section>
 
@@ -423,6 +500,10 @@
             </div>
         </section>
     </main>
+
+    <div class="mini-cta" role="region" aria-label="Schnellzugriff Shop">
+        <a class="mini-cta__btn mini-cta__btn--primary" href="https://sw6.hamburgpapier-shop.de/" aria-label="Zum Hamburgpapier Online Shop">Zum Shop</a>
+    </div>
 
     <footer role="contentinfo" aria-labelledby="footer-heading">
         <div class="container footer-inner">
